--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,9 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import Header from '../components/landing-page/Header.astro';
+import Hero from '../components/landing-page/Hero.astro';
+import Rooms from '../components/landing-page/Rooms.astro';
+import Contact from '../components/landing-page/Contact.astro';
+import Footer from '../components/landing-page/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -7,5 +11,9 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<Header />
+	<Hero />
+	<Rooms />
+	<Contact />
+	<Footer />
 </Layout>
