--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,10 @@
 ---
 import Header from '../components/landing-page/Header.astro';
 import Hero from '../components/landing-page/Hero.astro';
-import Rooms from '../components/landing-page/Rooms.astro';
 import Contact from '../components/landing-page/Contact.astro';
 import Footer from '../components/landing-page/Footer.astro';
 import Layout from '../layouts/Layout.astro';
+import About from '../components/landing-page/about.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -13,7 +13,7 @@ import Layout from '../layouts/Layout.astro';
 <Layout>
 	<Header />
 	<Hero />
-	<Rooms />
+	<About />
 	<Contact />
 	<Footer />
 </Layout>
