--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,10 +1,12 @@
 ---                            
-import '../styles/global.css'  
+import '../styles/global.css' 
+import { ClientRouter } from "astro:transitions"; 
 --- 
 
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
+		<ClientRouter />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/images/logo.webp" />
